--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -30,11 +30,8 @@
                 <div class="mb-3">
                   <input type="password" class="form-control" id="password" placeholder="password">
                 </div>
-                <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100" >Login</button></div>
-                <div id="emailHelp" class="form-text text-center mb-5 text-dark">
-                    Not Registered? 
-                    <a href="#" class="text-dark fw-bold"> Create an Account</a>
-                </div>
+                <a href="attendance.html" target="_blank"><div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100" >Login</button></div></a>
+                
               </form>
             </div>
     
