--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -11,26 +11,25 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+   
         <div class="row">
-          <div class="col-md-6 offset-md-3">
-            <div class="block1" >
+          <div class="col-md-6 col-md-6"> 
+            <div class="block" id="block1" >
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, vel recusandae dolorem officiis ad ipsum saepe molestiae commodi libero iure.</p>
             </div>
 
 
 
           </div>
-          <div class="col-md-6 offset-md-3">
-            <div class="block2" style="background-color: black;">
-
+          <div class="col-md-6 col-md-6">
+            <div class="block" id=" block2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex pariatur odio error unde, soluta blanditiis expedita temporibus labore provident hic.</p>
             </div>
 
 
 
-            
-          </div>
+           </div>
         </div>
-    </div>
+    
 </body>
 </html>
