--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -30,7 +30,7 @@
                 <div class="mb-3">
                   <input type="password" class="form-control" id="password" placeholder="password">
                 </div>
-                <a href="attendance.html" ><div class="text-center"><button  class="btn btn-color px-5 mb-5 w-100" >Login</button></div></a>
+                <a href="attendance.html" ><div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100" >Login</button></div></a>
                 
               </form>
             </div>
