--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -17,7 +17,7 @@
             
             <div class="card my-5">
     
-              <form class="card-body cardbody-color p-lg-5">
+              <form action='login' method='POST' class="card-body cardbody-color p-lg-5">
     
                 <div class="text-center">
                   <img src="../static/IMG-3830.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-4"
@@ -25,12 +25,12 @@
                 </div>
     
                 <div class="mb-3">
-                  <input type="text" class="form-control" id="Username" aria-describedby="emailHelp" placeholder="User Name">
+                  <input type='text' name='email' id='email' placeholder='email' class="form-control" id="Username" aria-describedby="emailHelp" placeholder="User Name">
                 </div>
                 <div class="mb-3">
-                  <input type="password" class="form-control" id="password" placeholder="password">
+                  <input type='password' name='password' id='password' placeholder='password' class="form-control" id="password" placeholder="password">
                 </div>
-                <a href="attendance.html" ><div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100" >Login</button></div></a>
+                <div class="text-center"><button type='submit' name='submit'  class="btn btn-color px-5 mb-5 w-100" >Login</button></div>
                 
               </form>
             </div>
