Added Login Manager Auth Module

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -25,12 +25,13 @@
                 </div>
     
                 <div class="mb-3">
-                  <input type='text' name='email' id='email' placeholder='email' class="form-control" id="Username" aria-describedby="emailHelp" placeholder="User Name">
+                  <input type='text' name='username' id='username' placeholder='username' class="form-control" id="Username" placeholder="User Name">
                 </div>
                 <div class="mb-3">
                   <input type='password' name='password' id='password' placeholder='password' class="form-control" id="password" placeholder="password">
                 </div>
-                <div class="text-center"><button type='submit' name='submit'  class="btn btn-color px-5 mb-5 w-100" >Login</button></div>
+                <div class="text-center">
+                <button type='submit' name='submit'  class="btn btn-color px-5 mb-5 w-100" >Login</button></div>
                 
               </form>
             </div>
