--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -13,16 +13,18 @@
 <body>
    
         <div class="row">
-          <div class="col-md-6 col-md-6"> 
+          <div class="col-md-6 col-md-6" id="half-block"> 
             <div class="block" id="block1" >
+                <img src="../static/checklist.png" id="checklist">
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, vel recusandae dolorem officiis ad ipsum saepe molestiae commodi libero iure.</p>
             </div>
 
 
 
           </div>
-          <div class="col-md-6 col-md-6">
+          <div class="col-md-6 col-md-6" id = "half-block">
             <div class="block" id=" block2">
+                
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex pariatur odio error unde, soluta blanditiis expedita temporibus labore provident hic.</p>
             </div>
 
