--- a/app/static/general.css
+++ b/app/static/general.css
@@ -1,4 +1,11 @@
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Corben', Georgia, Times, serif;
+}
+p, div {
+  font-family: 'Nobile', Helvetica, Arial, sans-serif;
+}
+
 
 .btn-color{
     background-color: #0e1c36;
@@ -20,24 +27,58 @@
   
   a{
     text-decoration: none;
+
   }
 
 
   .block{
+    border-radius: 10px;
     width: 90% ;
-    height: 700px;
-    background-color: rebeccapurple;
+    height: 650px;
+    width: 650px;
+    background-color: #ffffe0;
+  }
+  .block:hover{
+    background-color: #800000;
+    transition: ease 1000ms;
   }
 
   #half-block{
     padding-top:5%;
-    padding-left: 5%;
-    align-items: center;
+    text-align: center;
+    float: none;
+    border-radius: 10px;
+    
+  }
+  
+
+  .landingImage{
+    height: 400px;
+    width: 400px;
+    
   }
 
-  #checklist{
-    height: 550px;
-    width: auto;
-    padding-top: 5%;
-    padding-left: 6%;
+  .block-left {
+    padding: 0;
+    padding-left: 5%;
+    text-decoration: none;
+    
   }
+
+  
+.row{
+  padding: 0%;
+}
+.link{
+  display:inline-block;
+  width:100%;
+  height:100%;
+}
+
+img{
+  padding-top: 6%;
+}
+
+h1{
+  padding-top: 8%;
+}
