--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -4,34 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../static/general.css"   rel="stylesheet" type="text/css"/>
- 
+    <link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
     <title>Document</title>
 </head>
-<body>
+<body style = "padding-bottom: 15%;background-color: black;">
    
         <div class="row">
-          <div class="col-md-6 col-md-6" id="half-block"> 
-            <div class="block" id="block1" >
-                <img src="../static/checklist.png" id="checklist">
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, vel recusandae dolorem officiis ad ipsum saepe molestiae commodi libero iure.</p>
-            </div>
-
-
-
-          </div>
-          <div class="col-md-6 col-md-6" id = "half-block">
-            <div class="block" id=" block2">
+          <div class="col-md-5 mx-auto col-md-5 myBox" id="half-block">
+            
+            <div class="block" id="block1">
+              <a class="link" id = "Attendance-Link">
+                <img src="../static/clipboard-removebg-preview.png" class="landingImage" id="checklist">
+                <h1>Attendance</h2>  
+              </a>
+               
                 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex pariatur odio error unde, soluta blanditiis expedita temporibus labore provident hic.</p>
+                 
+               
             </div>
+        
+          </div>
+        
 
+      
+          <div class="col-md-5 mx-auto col-md-5" id= "half-block" class="block-right">
+            <div class="block" id="block2">
+              <a id="Analytics-Link"><span>
+                <img src = "../static/trend-removebg-preview.png" class ="landingImage" id="chart">
+                <h1>Analytics</h1>  
+              </a>  
+            </div>
+          
 
 
            </div>
+          
         </div>
-    
+
+
+
+    <script>
+      document.getElementById("Attendance-Link").addEventListener("click", redirect);
+      function redirect(){ window.location = "{{ url_for(attendance) }}"; }
+     
+    </script>
 </body>
 </html>
