--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -11,7 +11,7 @@
 
     <title>Document</title>
 </head>
-<body style = "padding-bottom: 15%;background-color: black;">
+<body style = "padding-bottom: 15%; background: url(../static/pipes.png) repeat 0 0;">
    
         <div class="row">
           <div class="col-md-5 mx-auto col-md-5 myBox" id="half-block">
