added landing page

--- a/app/templates/attendance.html
+++ b/app/templates/attendance.html
@@ -24,7 +24,7 @@
         {{ form.optional_comment.label }} <br>
         {{ form.optional_comment() }} <br>
         {{ form.submit() }}
-        <button onclick= "window.location.href='/login'">
+        <button onclick= "window.location.href='/landing_page'">
             Back
         </button>
 </body>
