--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -49,7 +49,7 @@
 
     <script>
       document.getElementById("Attendance-Link").addEventListener("click", redirect);
-      function redirect(){ window.location = "{{ url_for(attendance) }}"; }
+      function redirect(){ window.location = "/attendance"; }
      
     </script>
 </body>
