--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -18,7 +18,7 @@
             
             <div class="block" id="block1">
               <a class="link" id = "Attendance-Link">
-                <img src="../static/clipboard-removebg-preview.png" class="landingImage" id="checklist">
+                <img src="../static/clipboard-removebg-preview.png" class="landingImage"  id="checklist">
                 <h1>Attendance</h2>  
               </a>
                
@@ -34,7 +34,7 @@
           <div class="col-md-5 mx-auto col-md-5" id= "half-block" class="block-right">
             <div class="block" id="block2">
               <a id="Analytics-Link"><span>
-                <img src = "../static/trend-removebg-preview.png" class ="landingImage" id="chart">
+                <img src = "../static/trend-removebg-preview.png" class ="landingImage" id="chart" \>
                 <h1>Analytics</h1>  
               </a>  
             </div>
