changes to landing page

--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -11,7 +11,9 @@
 
     <title>Document</title>
 </head>
-<body style = "padding-bottom: 15%; background: url(../static/pipes.png) repeat 0 0;  overflow-x: hidden;">
+<body style = "padding-bottom: 15%;background-color: #ffffff;
+background-image: url('https://www.transparenttextures.com/patterns/bedge-grunge.png');
+  overflow-x: hidden;">
    
         <div class="row">
           <div class="col-md-5 mx-auto col-md-5 myBox" id="half-block">
