--- a/app/templates/attendance.html
+++ b/app/templates/attendance.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../static/general.css"   rel="stylesheet" type="text/css"/>
     <title>Attendance Form</title>
 </head>
 <body>
