--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -19,9 +19,9 @@ background-image: url('https://www.transparenttextures.com/patterns/bedge-grunge
           <div class="col-md-5 mx-auto col-md-5 myBox" id="half-block">
             
             <div class="block" id="block1">
-              <a class="link" id = "Attendance-Link">
+              <a class="link" id = "Attendance-Link" style="text-decoration: none; color: black;">
                 <img src="../static/clipboard-removebg-preview.png" class="landingImage"  id="checklist">
-                <h1>Attendance</h2>  
+                <h1 style="text-decoration: none; color: black;">Attendance</h2>  
               </a>
                
                 
