good back button

--- a/app/templates/attendance.html
+++ b/app/templates/attendance.html
@@ -42,9 +42,7 @@ background-image: url('https://www.transparenttextures.com/patterns/bedge-grunge
         {{ form.optional_comment.label }} <br>
         {{ form.optional_comment() }} <br>
         {{ form.submit() }}
-        <button onclick= "window.location.href='/landing_page'">
-            Back
-        </button>
+        <input type = "submit" name = "redirect_landing" value = "Back" id = "redirect_landing">
     </div>
 </body>
 </html>
