--- a/app/templates/attendance.html
+++ b/app/templates/attendance.html
@@ -10,7 +10,7 @@
 background-image: url('https://www.transparenttextures.com/patterns/bedge-grunge.png');
   overflow-x: hidden;">
     <div id="display_contents">
-    <form action="" method="post" role="form" id="form_attendance" style="padding: 100px;">
+    <form action="" method="post" role="form" id="form_attendance" style="padding: 15%;">
         <div>
         {{ form.hidden_tag() }}
         <br>
