--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -20,7 +20,7 @@ background-image: url('https://www.transparenttextures.com/patterns/bedge-grunge
             
             <div class="block" id="block1">
               <a class="link" id = "Attendance-Link" style="text-decoration: none; color: black;">
-                <img style="padding-top: 70px;"    src="../static/clipboard-removebg-preview.png" class="landingImage"  id="checklist">
+                <img style="padding-top: 12%;"    src="../static/clipboard-removebg-preview.png" class="landingImage"  id="checklist">
                 <h1 style="text-decoration: none; color: black;">Attendance</h2>  
               </a>
                
@@ -36,7 +36,7 @@ background-image: url('https://www.transparenttextures.com/patterns/bedge-grunge
           <div class="col-md-5 mx-auto col-md-5" id= "half-block" class="block-right">
             <div class="block" id="block2">
               <a id="Analytics-Link"><span>
-                <img style="padding-top: 70px;"  src = "../static/trend-removebg-preview.png" class ="landingImage" id="chart" \>
+                <img style="padding-top: 12%;"  src = "../static/trend-removebg-preview.png" class ="landingImage" id="chart" \>
                 <h1>Analytics</h1>  
               </a>  
             </div>
