--- a/app/static/general.css
+++ b/app/static/general.css
@@ -32,32 +32,44 @@ p, div {
 
 
   .block{
-    border-radius: 10px;
-    width: 90% ;
-    height: 650px;
-    width: 650px;
+  
+    width: 100% ;
+    height: 800px;
+  
     background-color: whitesmoke;
     border: 2px 2px 2px 2px rounded black;
     
     text-decoration: none;
 
   }
-  .block:hover{
-    border-radius: 50%;
-    background-color: #FF7F50;
-    transition: ease   1000ms;
-    color: #0e1c36;
-  }
+  
 
   #half-block{
     padding-top:5%;
     text-align: center;
     float: none;
-    border-radius: 10px;
+
     
   }
   
-
+  #block1{
+    background-image: url('../static/zaini-izzuddin-55btQzyDiO8-unsplash.jpg');
+    background-position: center;
+    padding-top:5%;
+    text-align: center;
+    float: none;
+    transition: ease-in-out 1000ms;
+    
+  }
+  
+  #block1:hover{
+    display: inline-block;
+    transition: ease-in-out 1000ms;
+    background-image: url('../static/unplash-bookshelf-editeed.png');
+    background-size: cover;
+  }
+ 
+  
   .landingImage{
     height: 400px;
     width: 400px;
@@ -66,7 +78,7 @@ p, div {
 
   .block-left {
     padding: 0;
-    padding-left: 5%;
+   
     text-decoration: none;
     
   }
@@ -95,4 +107,9 @@ h1{
   display: flex;
   justify-content: center;
   height: 200px;
+}
+
+.box{
+  background-color: black;
+  background-image: url('../static/zaini-izzuddin-55btQzyDiO8-unsplash.jpg');
 }
