--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -8,7 +8,7 @@
     <link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>Document</title>
 </head>
 <body style = "padding-bottom: 15%;background-color: #ffffff;
@@ -16,12 +16,12 @@ background-image: url('https://www.transparenttextures.com/patterns/bedge-grunge
   overflow-x: hidden;">
    
         <div class="row">
-          <div class="col-md-5 mx-auto col-md-5 myBox" id="half-block">
+          <div class="col-md-6 mx-auto col-md-6  box" style="padding-left: 0; padding-right: 0;padding: 0;" id="half-block">
             
             <div class="block" id="block1">
               <a class="link" id = "Attendance-Link" style="text-decoration: none; color: black;">
                 <img style="padding-top: 12%;"    src="../static/clipboard-removebg-preview.png" class="landingImage"  id="checklist">
-                <h1 style="text-decoration: none; color: black;">Attendance</h2>  
+                <h1 id="typewriter" style="text-decoration: none; color: black;">Attendance</h1>  
               </a>
                
                 
@@ -33,9 +33,9 @@ background-image: url('https://www.transparenttextures.com/patterns/bedge-grunge
         
 
       
-          <div class="col-md-5 mx-auto col-md-5" id= "half-block" class="block-right">
+          <div class="col-md-6 mx-auto col-md-6" style="padding-left: 0; padding-right: 0; padding:0;" id= "half-block" class="block-right">
             <div class="block" id="block2">
-              <a id="Analytics-Link"><span>
+              <a id="Analytics-Link">
                 <img style="padding-top: 12%;"  src = "../static/trend-removebg-preview.png" class ="landingImage" id="chart" \>
                 <h1>Analytics</h1>  
               </a>  
@@ -52,7 +52,26 @@ background-image: url('https://www.transparenttextures.com/patterns/bedge-grunge
     <script>
       document.getElementById("Attendance-Link").addEventListener("click", redirect);
       function redirect(){ window.location = "/attendance"; }
-     
+
+      document.getElementById("Analytics-Link").addEventListener("click", redirect1);
+      function redirect1(){ window.location = "/data"; }
+
+
+      var i = 0;
+      var txt = ["Attendance"];
+      var pos = 0 ; 
+      var speed = 50;
+
+      typeWriter = () => {
+        document.querySelector("#typewriter").innerHTML = txt[0].substring(0,pos) + "<span>\u25ae</span>"
+
+        if(pos++ !=  txt[0].length){
+          setTimeout(typeWriter,speed);
+        }
+        
+      }
+      windows.addEventListener("load",typeWriter);
     </script>
+    
 </body>
 </html>
