--- a/app/static/static.css
+++ b/app/static/static.css
@@ -73,6 +73,13 @@ body {
   padding-right: 30%;
   transform-origin: 100% 0; }
 
+  .link{
+    display:inline-block;
+    width:100%;
+    height:100%;
+  }
+
+
 .page-right .page-content {
   padding-left: 30%;
   padding-right: 30%;
