--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -25,31 +25,42 @@
       </nav>
 
 
-    <div class="skewed-pages">
+<div class="skewed-pages">
+   
         <div class="page1 page active">
             <div class="page-left half-page">
-                <div class="page-block">
-                    <div class="page-content">
+                    <div class="page-block">
+                        <div class="page-content">
 
+                        </div>
                     </div>
-                </div>
             </div>
             <div class="page-right half-page">
-                <div class="page-block">
-                    <div class="page-content">
-                        <h1 class="page-heading">Attendance</h1>
-                        <p class="page-message">(scroll for more)</p>
-                    </div>
+                <a class="link" id = "Attendance-Link" style="text-decoration: none;">
+                    <div class="page-block">
+                        
+                        <div class="page-content">
+                            
+                             <h1 class="page-heading">Attendance</h1>
+                        
+                             <p class="page-message">(scroll for more)</p>
+                        
+                     </div>
+                </a>
+                    
                 </div>
             </div>
         </div>
+    
         <div class="page2 page">
             <div class="page-left half-page">
-                <div class="page-block">
-                    <div class="page-content">
-                        <h1 class="page-heading">Analytics</h1>
-                        <p class="page-message">(scroll up to go back)</p>
-                    </div>
+           
+                    <div class="page-block">
+                        <div class="page-content">
+                            <h1 class="page-heading">Analytics</h1>
+                            <p class="page-message">(scroll up to go back)</p>
+                        </div>
+         
                 </div>
             </div>
             <div class="page-right half-page">
@@ -62,7 +73,17 @@
         </div>
         
     </div>
+<script>
 
+    document.getElementById("Attendance-Link").addEventListener("click", redirect);
+
+    function redirect(){ window.location = "/attendance"; }
+
+   // document.getElementById("Analytics-Link").addEventListener("click", redirect1);
+    
+    //function redirect1(){ window.location = "/data"; }
+
+</script>
     
 </body>
 </html>
