--- a/app/static/static.css
+++ b/app/static/static.css
@@ -1,8 +1,7 @@
 *, *:before, *:after {
   box-sizing: border-box;
   margin: 0;
-  padding: 0; 
-}
+  padding: 0; }
 
 body {
   background: #292929;
@@ -12,6 +11,14 @@ body {
   overflow: hidden;
   position: relative;
   height: 100vh; }
+
+.link {
+  display: inline-block;
+  width: 100%;
+  height: 100%; }
+
+.link:hover {
+  color: red; }
 
 .page {
   position: absolute;
@@ -73,13 +80,6 @@ body {
   padding-right: 30%;
   transform-origin: 100% 0; }
 
-  .link{
-    display:inline-block;
-    width:100%;
-    height:100%;
-  }
-
-
 .page-right .page-content {
   padding-left: 30%;
   padding-right: 30%;
@@ -100,7 +100,7 @@ body {
   text-align: center; }
 
 .page1 .page-left .page-content {
-  background-image: url("../static/unplash-bookshelf-editeed.png"); }
+  background-image: url("../static/aneta-pawlik-GelF0x5e--c-unsplash.jpg"); }
 
 .page1 .page-right .page-content {
   background: #292929; }
@@ -109,4 +109,4 @@ body {
   background: #292929; }
 
 .page2 .page-right .page-content {
-  background-image: url("../static/zaini-izzuddin-55btQzyDiO8-unsplash.jpg"); }
+  background-image: url("../static/fabio-oyXis2kALVg-unsplash.jpg"); }
