--- a/app/static/static.scss
+++ b/app/static/static.scss
@@ -14,7 +14,15 @@ body {
   position: relative;
   height: 100vh; 
 }
+.link{
+  display:inline-block;
+  width:100%;
+  height:100%;
+}
 
+.link:hover{
+  color: red;
+}
 .page {
   position: absolute;
   left: 0;
@@ -52,9 +60,11 @@ body {
     background: #000; 
   }
     .page-left .page-block {
-      left: -40%; }
+      left: -40%;
+    }
     .page-right .page-block {
-      right: -40%; }
+      right: -40%; 
+    }
   .page .page-content {
     display: flex;
     align-items: center;
@@ -69,31 +79,41 @@ body {
     color: #fff;
     transform: skewX(18deg);
     transition: transform 1s, opacity 1s;
-    background-size: cover; }
+    background-size: cover; 
+  }
     .page-left .page-content {
       padding-left: 30%;
       padding-right: 30%;
-      transform-origin: 100% 0; }
+      transform-origin: 100% 0; 
+    }
     .page-right .page-content {
       padding-left: 30%;
       padding-right: 30%;
-      transform-origin: 0 100%; }
+      transform-origin: 0 100%; 
+    }
     .page.inactive .page-content {
       opacity: 0.5;
-      transform: skewX(18deg) scale(0.95); }
+      transform: skewX(18deg) scale(0.95); 
+    }
   .page .page-heading {
     margin-bottom: 15px;
     text-transform: uppercase;
     font-size: 25px;
-    text-align: center; }
+    text-align: center; 
+  }
   .page .page-message {
     font-size: 18px;
-    text-align: center; }
+    text-align: center; 
+  }
    .page1 .page-left .page-content {
-    background-image: url("../static/unplash-bookshelf-editeed.png"); }
+    background-image: url("../static/aneta-pawlik-GelF0x5e--c-unsplash.jpg"); 
+  }
  .page1 .page-right .page-content {
-    background: #292929; }
+    background: #292929; 
+  }
    .page2 .page-left .page-content {
-    background: #292929; }
+    background: #292929; 
+  }
 .page2 .page-right .page-content {
-    background-image: url("../static/zaini-izzuddin-55btQzyDiO8-unsplash.jpg"); }
+    background-image: url("../static/fabio-oyXis2kALVg-unsplash.jpg"); 
+  }
