changes to landing page

--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -35,15 +35,15 @@
                         </div>
                     </div>
             </div>
-            <div class="page-right half-page">
+            <div class="page-right half-page" id ="attendance-box">
                     <a class="link" id = "attendance-link">
                         <div class="page-block">
                             
                             <div class="page-content">
                                 
-                                <h1 class="page-heading">Attendance</h1>
-                            
-                                <p class="page-message">(scroll for more)</p>
+                                <button class="page-heading" id="page-button">Attendance</button>
+                                
+                                <p class="page-message" style="padding-top: 1rem;">(scroll for more)</p>
                             
                             </div>
                         </div>
