--- a/app/static/static.css
+++ b/app/static/static.css
@@ -17,8 +17,25 @@ body {
   width: 100%;
   height: 100%; }
 
-.link:hover {
-  color: red; }
+.page-block:hover {
+  color: #292929; }
+
+#attendance-link:hover {
+  font-size: 100px;
+  color: #292929; }
+
+#page-button {
+  display: inline-block;
+  width: 80%;
+  opacity: .20;
+  height: 10%;
+  padding: 0;
+  border-radius: 2rem;
+  background-color: white;
+  transition: ease 1000ms; }
+
+#page-button:hover {
+  opacity: 1; }
 
 .page {
   position: absolute;
