--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent" style="padding-right: 5vh; font-size: larger;">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active" style="text-align: end;">
-              <a class="nav-link text-right" id="nav-logout" style= "color: white; text-align: right;"> Logout<span class="sr-only"></span></a>
+             <button id= "logout-button"> <a class="nav-link text-right" id="nav-logout" style= "color: black; text-align: right;"> Logout<span class="sr-only"></span></a></button>
             </li>
             
           </ul>
