--- a/app/static/static.scss
+++ b/app/static/static.scss
@@ -49,6 +49,16 @@ body {
   
   opacity: 1;
 }
+#logout-button{
+  border-radius: 3rem;
+  height: 100%;
+  width: 100%;
+  opacity: .2;
+  transition: ease 1000ms;
+}
+#logout-button:hover{
+  opacity: 1;
+}
 .page {
   position: absolute;
   left: 0;
