--- a/app/templates/session_form.html
+++ b/app/templates/session_form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../static/general.css"   rel="stylesheet" type="text/css"/>
-    <title>Attendance Form</title>
+    <title>Session Summary</title>
 </head>
 <body style ="
 background-image: url('https://www.transparenttextures.com/patterns/bedge-grunge.png');
