--- a/app/templates/stats.html
+++ b/app/templates/stats.html
@@ -4,17 +4,40 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
-Attendance:
-{% for table in attendanceTable %}
-            {{ table|safe }}
-{% endfor %}
-<br>
-<br>
-Sessions:
-{% for table in sessionsTable %}
-            {{ table|safe }}
-{% endfor %}
+<body style ="
+background-image: url('https://www.transparenttextures.com/patterns/bedge-grunge.png');
+  overflow-x: hidden;">
+  <div style="display: flex; align-items: center; justify-content: center; top: 50%;">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    
+        Attendance:
+        <br>
+        <br>
+        {% for table in attendanceTable %}
+        <br>
+        <br>
+
+                    {{ table|safe }}
+                    <br>
+                    <br>
+        {% endfor %}
+        <br>
+        <br>
+
+        <br>
+        <br>
+        Sessions:
+        {% for table in sessionsTable %}
+                    {{ table|safe }}
+        {% endfor %}
+    
+  </div>
 
 </body>
 </html>
